otp problem is solved now

--- a/03_dash-board/index.html
+++ b/03_dash-board/index.html
@@ -213,7 +213,7 @@
 
                     <!-- dashboard -->
 
-                    <div class="dashbord-content" data-page="dashboard">
+                    <div class="dashbord-content" data-page="dashboard" style="display: none;">
                         <!-- content container -->
 
                         <div class="application-dashboard">
@@ -1785,7 +1785,7 @@
 
 
                         <!-- four table -->
-                        <div class="mentorship-table-data" id="Internship Applied" style="display:none ;"
+                        <div class="mentorship-table-data" id="Internship-Applied" style="display:none ;"
                             table-id="Internship Applied">
                             <div class="mentorship-table-data-container">
 
@@ -1858,8 +1858,8 @@
                             </div>
                         </div>
 
-                        <div class="mentorship-table-data" id="Internship Under Review Candidates" style="display:none ;"
-                            table-id="internship Under Review Candidates">
+                        <div class="mentorship-table-data" id="Internship-Under-Review Candidates"
+                            style="display:none ;" table-id="internship Under Review Candidates">
                             <div class="mentorship-table-data-container">
 
                                 <div class="heading">
@@ -1931,7 +1931,7 @@
                             </div>
                         </div>
 
-                        <div class="mentorship-table-data" id="Internship Selected Candidates" style="display:none ;"
+                        <div class="mentorship-table-data" id="Internship-Selected-Candidates" style="display:none ;"
                             table-id="internship Selected Candidates">
                             <div class="mentorship-table-data-container">
 
@@ -2004,7 +2004,7 @@
                             </div>
                         </div>
 
-                        <div class="mentorship-table-data" id="Internship Rejected Candidates" style="display:none ;"
+                        <div class="mentorship-table-data" id="Internship-Rejected-Candidates" style="display:none ;"
                             table-id="internship Rejected Candidates">
                             <div class="mentorship-table-data-container">
 
@@ -2116,8 +2116,8 @@
                         </div>
 
                         <!-- two table -->
-                        <div class="mentorship-table-data" id="Internship Open/Ongoing Internships" style="display:none ;"
-                            table-id="internship Ongoing Internships">
+                        <div class="mentorship-table-data" id="Internship-Open/Ongoing Internships"
+                            style="display:none ;" table-id="internship Ongoing Internships">
                             <div class="mentorship-table-data-container">
 
                                 <div class="heading">
@@ -2188,7 +2188,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mentorship-table-data" id="Internship Number of Roles" style="display:none ;"
+                        <div class="mentorship-table-data" id="Internship-Number-of-Roles" style="display:none ;"
                             table-id="internship Number of Roles">
                             <div class="mentorship-table-data-container">
 
@@ -2271,8 +2271,124 @@
 
                     </div>
 
+
+
+
                     <!-- fresher job -->
 
+
+
+                    <div class="fresher-job-content" data-page="fresher job">
+
+                        <div class="fresher-job-content-container">
+                            <span>
+                                <img src="/Assets/images/grade.png" alt="">
+                                <h1>Continue creating more fresher job opportunities</h1>
+                            </span>
+                            <button id="Create-btn">Create Fresher Job</button>
+                        </div>
+
+                        <div class="fresher-job-summary-container">
+                            <h1>Fresher Job Summary</h1>
+                            <div class="fresher-job-summary-box">
+
+                                <div class="box">
+                                    <div class="box-img-container">
+                                        <span>
+                                            <img src="/Assets/images/05_Fresher Job Active Users.png" alt=""
+                                                class="dashboard-icon-img">
+                                            <p style="color: #FC423B;">Fresher Job Applied</p>
+                                        </span>
+                                        <i class='bx bx-right-arrow-alt'></i>
+                                    </div>
+                                    <div id="content-amount">08 <p>-1.02% ▾</p>
+                                    </div>
+                                    <p>This Month: <span>+05 Fresher job Applied</span></p>
+                                </div>
+
+                                <div class="box">
+                                    <div class="box-img-container">
+                                        <span>
+                                            <img src="/Assets/images/02_under-review.png" alt=""
+                                                class="dashboard-icon-img">
+                                            <p style="color: #098CE3;">Under Review Candidates</p>
+                                        </span>
+                                        <i class='bx bx-right-arrow-alt'></i>
+                                    </div>
+                                    <div id="content-amount">08</div>
+                                    <p>This Month: <span>+05 Fresher job Applied</span></p>
+                                </div>
+
+                                <div class="box">
+                                    <div class="box-img-container">
+                                        <span>
+                                            <img src="/Assets/images/03_selected.png" alt="" class="dashboard-icon-img">
+                                            <p style="color: #34AD78;">Fresher Job Applied</p>
+                                        </span>
+                                        <i class='bx bx-right-arrow-alt'></i>
+                                    </div>
+                                    <div id="content-amount">08</div>
+                                    <p>This Month: <span>+05 Fresher job Applied</span></p>
+                                </div>
+
+                                <div class="box">
+                                    <div class="box-img-container">
+                                        <span>
+                                            <img src="/Assets/images/04_rejected.png" alt="" class="dashboard-icon-img">
+                                            <p style="color: #DC143C;">Fresher Job Applied</p>
+                                        </span>
+                                        <i class='bx bx-right-arrow-alt'></i>
+                                    </div>
+                                    <div id="content-amount">08</div>
+                                    <p>This Month: <span>+05 Fresher job Applied</span></p>
+                                </div>
+
+                            </div>
+                        </div>
+
+
+                        <div class="fresher-job-status-container">
+                            <h1>Fresher Job Status</h1>
+                            <div class="fresher-job-status-box">
+
+                                <div class="box">
+                                    <div class="box-img-container">
+                                        <span>
+                                            <img src="/Assets/images/05_ongoing.png" alt="" class="dashboard-icon-img">
+                                            <p style="color: #09C0B5;">Open/Ongoing Fresher Job</p>
+                                        </span>
+                                        <i class='bx bx-right-arrow-alt'></i>
+                                    </div>
+                                    <div id="content-amount">08<p>+2.02% ▴</p>
+                                    </div>
+                                    <p>This Month: <span>+05 Fresher job Applied</span></p>
+                                </div>
+
+                                <div class="box">
+                                    <div class="box-img-container">
+                                        <span>
+                                            <img src="/Assets/images/06_roles.png" alt="" class="dashboard-icon-img">
+                                            <p style="color: #cb46bb;">Number of Roles</p>
+                                        </span>
+                                        <i class='bx bx-right-arrow-alt'></i>
+                                    </div>
+                                    <div id="content-amount">08</div>
+                                    <p>This Month: <span>+05 Fresher job Applied</span></p>
+                                </div>
+
+                            </div>
+                        </div>
+
+
+
+                        <div class="goto-top-btn">
+                            <a href="#dashboard-page" onclick="scrollTotop()">
+                                <img src="/Assets/images/goto-top-btn.png" alt="">
+                                <p>Go to Top</p>
+                            </a>
+                        </div>
+
+                    </div>
 
 
                     <!-- add other section -->
