dashboard is completed now

--- a/03_dash-board/index.html
+++ b/03_dash-board/index.html
@@ -212,7 +212,7 @@
                 <div class="dashboard-container"><!-- scroll -->
 
                     <!-- dashboard -->
-                    <div class="dashbord-content" data-page="dashboard" style="display:;">
+                    <div class="dashbord-content" data-page="dashboard">
                         <!-- content container -->
 
                         <div class="main-dashboard">
@@ -418,11 +418,111 @@
                         </div>
 
 
+
+
+
+
                         <div class="user-dashboard">
-                            <!-- <i class='bx bx-grid-vertical'></i> -->
+                            <div class="user-dashboard-heading">
+                                <h1>User's Dashboard</h1>
+                            </div>
+                            <span id="heading-separator"></span>
+
+                            <div class="user-dashboard-container">
+
+                                <div class="gender-container">
+
+                                    <div class="female-user">
+
+                                        <div class="female-count">
+                                            <h1>1345</h1>
+                                            <p>Female Users</p>
+                                        </div>
+
+                                        <div class="verified-non-verified-data">
+                                            <div class="verified-user">
+                                                <div class="verified-count">
+                                                    <h1>145</h1>
+                                                    <p>Verified</p>
+                                                </div>
+                                                <i class='bx bxs-right-arrow'></i>
+                                            </div>
+
+                                            <div class="not-verified-user">
+                                                <div class="verified-count">
+                                                    <h1>085</h1>
+                                                    <p>Not Verified</p>
+                                                </div>
+                                                <i class='bx bxs-right-arrow'></i>
+                                            </div>
+                                            
+                                        </div>
+
+                                    </div>
+
+                                    <div class="male-user">
+                                        <div class="male-count">
+                                            <h1>3242</h1>
+                                            <p>Male Users</p>
+                                        </div>
+                                        <div class="verified-non-verified-data">
+                                            <div class="verified-user">
+                                                <div class="verified-count">
+                                                    <h1>145</h1>
+                                                    <p>Verified</p>
+                                                </div>
+                                                <i class='bx bxs-right-arrow'></i>
+                                            </div>
+                                            <div class="not-verified-user">
+                                                <div class="verified-count">
+                                                    <h1>085</h1>
+                                                    <p>Not Verified</p>
+                                                </div>
+                                                <i class='bx bxs-right-arrow'></i>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+
+
+                                <div class="user-other-data-container">
+
+                                    <div class="user-data1">
+                                        <div class="interested-domain">
+                                            <p>Interested Domain</p>
+                                            <i class='bx bxs-right-arrow'></i>
+                                        </div>
+                                        <div class="branch">
+                                            <p>Branch</p>
+                                            <i class='bx bxs-right-arrow'></i>
+                                        </div>
+                                    </div>
+
+                                    <div class="user-data2">
+                                        <div class="passing-year">
+                                            <p>Passing Year</p>
+                                            <i class='bx bxs-right-arrow'></i>
+                                        </div>
+                                        <div class="college-state">
+                                            <p>College State</p>
+                                            <i class='bx bxs-right-arrow'></i>
+                                        </div>
+                                    </div>
+
+                                    <div class="user-data3">
+                                        <div class="degree">
+                                            <p>Degree</p>
+                                            <i class='bx bxs-right-arrow'></i>
+                                        </div>
+                                        <div class="birth-place">
+                                            <p>Birth Place</p>
+                                            <i class='bx bxs-right-arrow'></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-
-
 
 
                         <div class="hiremi-Ongoing-dashboard">
